<resources>
    <string name="app_name">appListaCurso</string>
    <string name="text_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="text_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="text_hint_sobrenome">Sobrenome</string>
    <string name="text_hint_nome_do_curso">Nome do Curso desejado</string>
    <string name="text_hint_telefone_de_contato">Telefone de contato</string>
    <string name="text_button_limpar">LIMPAR</string>
    <string name="text_button_salvar">SALVAR</string>
    <string name="text_button_finalizar">FINALIZAR</string>
    <string name="text_selecione_um_curso">Selecione um curso</string>
    <string name="spinner_curso" />
    <string name="txt_selecione_um_curso">Selecione um Curso</string>
</resources>